fixed portfolio-footer alignment

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -43,3 +43,13 @@ footer p {
 .portfolio-container {
   margin-top: 30px;
 }
+
+.footer-link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.footer-link a {
+  margin-left: 3px;
+  margin-right: 3px;
+}
